--- a/app/views/essentials/index.html.erb
+++ b/app/views/essentials/index.html.erb
@@ -11,7 +11,7 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">News</a>
+                <a class="nav-link" href="#">Doctors</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
