i have added authentication

--- a/app/assets/stylesheets/essentials.scss
+++ b/app/assets/stylesheets/essentials.scss
@@ -61,3 +61,15 @@
     transition: all 0.9s;
     border-radius: 25px!important;
 }
+
+.doc2{
+    width:30rem!important
+}
+
+.bg-dark-accent{
+    background-color: #363062!important;
+}
+
+.bg-light-accent{
+    background-color: #827397!important;
+}
