--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.login-page{
+    height: 100vh;
+    background-color: #363062;
+}
+
+.doctor-iamge{
+    width: 10px;
+}
