i have added admin

--- a/app/assets/stylesheets/essentials.scss
+++ b/app/assets/stylesheets/essentials.scss
@@ -73,3 +73,18 @@
 .bg-light-accent{
     background-color: #827397!important;
 }
+
+.admin-page{
+    background-color: #4d4c7d;
+    min-width: 100%;
+    min-height: 100vh;
+}
+
+.nav-pill{
+    border-radius: 50px;
+    background-color: #827397;
+}
+
+.btn-pill{
+    border-radius: 50px!important
+}
