--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -20,7 +20,7 @@
             <% applications_without_full_informations = 0 %>
             <div class="col-7">
                 <%if @requests.length > 0%>
-                    <p class="text-light m5-5 mb-3">Applications list</p>
+                    <p class="text-light mb-3">Applications list</p>
                     <% column_counter = 0 %>
                     <table class="table table-striped table-light">
                         <thead>
@@ -65,6 +65,7 @@
                             <%end%>
                         </tbody>
                     </table>
+                    <div class="nav-pill"><div class="m-2 btn bg-accent btn-pill"><%= paginate @requests,class:"pagination" %></div></div>
                 <%else%>
                     <p class="text-light m5-5 mb-3 Display-4">There are no applications now</p>
                 <%end%>
@@ -106,41 +107,48 @@
                             <%end%>
                         </tbody>
                     </table>
+                    <%if @active_users.length>5 %>
+                        <div class="nav-pill"><div class="m-2 btn bg-accent btn-pill"><%= paginate @active_users,class:"pagination" %></div></div>
+                    <%end%>
                 <%else%>
                     <p class="text-light m5-5 mb-3 Display-4">There are no active doctors now now</p>
                 <%end%>
             </div>
             <div class="col-5">
-                <%if @active_users.length > 0%>
-                    <div class="card-columns mt-2">
+                    <div class="card-columns mt-5">
                         <div class="card m-2 card-bg-light" style="width:15rem!important">
                             <div class="card-body">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <span class="card-title font-weight-bold">Active Doctors</span>
                                     <img src="https://img.icons8.com/bubbles/50/000000/medical-doctor.png" class="download-icon"/>
                                 </div>
-                                <div>
-                                    <p class="h4">All doctors <%= @all_doctors%><p>
-                                    <div class="ml-2">
-                                        <p class="h6">- All active doctors <%= @active_users.length%><p>
-                                        <p class="h6">- All non active doctors <%= @requests.length%><p>
-                                        <% active_doctor_percantage = (@active_users.length.to_f/@all_doctors.to_f)*100%>
-                                        <p>- <%= active_doctor_percantage.to_i%>% of all doctors have been activated</p>
+                                <%if @active_users.length > 0%>
+                                    <div>
+                                        <p class="h4">All doctors <%= @all_doctors%><p>
+                                        <div class="ml-2">
+                                            <p class="h6">- All active doctors <%= @active_users.length%><p>
+                                            <p class="h6">- All non active doctors <%= @requests.length%><p>
+                                            <% active_doctor_percantage = (@active_users.length.to_f/@all_doctors.to_f)*100%>
+                                            <p>- <%= active_doctor_percantage.to_i%>% of all doctors have been activated</p>
+                                        </div>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= active_doctor_percantage %>%"></div>
+                                        </div>
                                     </div>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= active_doctor_percantage %>%"></div>
+                                <%else%>
+                                    <div>
+                                        <p class="h4 text-light">There are no active doctors right now<p>
                                     </div>
-                                </div>
+                                <%end%>
                             </div>
                         </div>
-                    <%end%>
-                    <%if @requests.length > 0%>
-                        <div class="card m-2 card-bg-dark" style="width:15rem!important">
-                            <div class="card-body">
-                                <div class="d-flex justify-content-between">
-                                    <span class="card-title font-weight-bold text-light">Applications</span>
-                                    <img src="https://img.icons8.com/ios/50/000000/text-input-form.png" class="download-icon"/>
-                                </div>
+                    <div class="card m-2 card-bg-dark" style="width:15rem!important">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between">
+                                <span class="card-title font-weight-bold text-light">Applications</span>
+                                <img src="https://img.icons8.com/ios/50/000000/text-input-form.png" class="download-icon"/>
+                            </div>
+                            <%if @requests.length > 0%>
                                 <div>
                                     <p class="h4 text-light">All Applications <%= @requests.length%><p>
                                     <div class="ml-2 text-light">
@@ -152,9 +160,13 @@
                                         <div class="progress-bar progress-bar-animated bg-light" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= percentage_of_all_applications_with_full_information %>%"></div>
                                     </div>
                                 </div>
-                            </div>
+                            <%else%>
+                                <div>
+                                    <p class="h4 text-light">There are no applications right now<p>
+                                </div>
+                            <%end%>
                         </div>
-                    <%end%>
+                    </div>
                     <div class="card m-2" style="width:15rem!important">
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
