--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,7 +15,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid mt-5">
         <div class="row">
             <% applications_without_full_informations = 0 %>
             <div class="col-7">
@@ -69,105 +69,62 @@
                 <%else%>
                     <p class="text-light m5-5 mb-3 Display-4">There are no applications now</p>
                 <%end%>
-                <%if @active_users.length > 0%>
-                    <p class="text-light m5-5 mb-3">Doctors list</p>
-                    <% column_counter = 0 %>
-                    <table class="table table-striped table-light">
-                        <thead>
-                            <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Names</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Activated</th>
-                            <th scope="col">Cv</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% @active_users.each do |user| %>
-                                <tr class="border-0 tr-hover">
-                                    <th scope="row"><%= column_counter += 1%></th>
-                                    <%if user["username"].present?%>
-                                        <td><%=user["username"]%></td>
-                                    <%else%>
-                                        <td>Not set</td>
-                                    <%end%>
-                                    <%if user["email"].present?%>
-                                        <td><%=user["email"]%></td>
-                                    <%else%>
-                                        <td>Not set</td>
-                                    <%end%>
-                                    <td><%= time_ago_in_words(user["updated_at"])%><span> ago<span></td>
-                                    <%if user["cv"].present?%>
-                                        <td><%= link_to image_tag("https://img.icons8.com/windows/32/000000/download.png"), user.cv.url(), class:"download-icon"%></td>
-                                    <%else%>
-                                        <td>Not set</td>
-                                    <%end%>
-                                    <td><%= link_to image_tag("https://img.icons8.com/android/24/000000/trash.png"),  user, method: :delete, data: { confirm: 'Are you sure?' }, class:"download-icon"%></td>
-                                </tr>
-                            <%end%>
-                        </tbody>
-                    </table>
-                    <%if @active_users.length>5 %>
-                        <div class="nav-pill"><div class="m-2 btn bg-accent btn-pill"><%= paginate @active_users,class:"pagination" %></div></div>
-                    <%end%>
-                <%else%>
-                    <p class="text-light m5-5 mb-3 Display-4">There are no active doctors now now</p>
-                <%end%>
             </div>
             <div class="col-5">
-                    <div class="card-columns mt-5">
+                    <div class="card-columns">
+                        <div class="card m-2 card-bg-dark" style="width:15rem!important">
+                            <div class="card-body">
+                                <div class="d-flex justify-content-between">
+                                    <span class="card-title font-weight-bold text-light">Applications</span>
+                                    <img src="https://img.icons8.com/ios/50/000000/text-input-form.png" class="download-icon"/>
+                                </div>
+                                <%if @requests.length > 0 %>
+                                    <div>
+                                        <p class="h4 text-light">All Applications <%= @requests.length%><p>
+                                        <div class="ml-2 text-light">
+                                            <p class="h6 text-light">- All applications with full informations <%= @all_requets_without_full_info_count%><p>
+                                            <% percentage_of_all_applications_with_full_information = (@all_requets_without_full_info_count == 0 ? 1 : @all_requets_without_full_info_count.to_f/@all_requets_count.to_f)*100%>
+                                            <p class="text-light">- <%= percentage_of_all_applications_with_full_information.to_i%>% of all applications doesnt have full informations</p>
+                                        </div>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-animated bg-light" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= percentage_of_all_applications_with_full_information %>%"></div>
+                                        </div>
+                                    </div>
+                                <%else%>
+                                    <div>
+                                        <p class="h4 text-light">There are no applications right now<p>
+                                    </div>
+                                <%end%>
+                            </div>
+                        </div>
                         <div class="card m-2 card-bg-light" style="width:15rem!important">
                             <div class="card-body">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <span class="card-title font-weight-bold">Active Doctors</span>
                                     <img src="https://img.icons8.com/bubbles/50/000000/medical-doctor.png" class="download-icon"/>
                                 </div>
-                                <%if @active_users.length > 0%>
+                                <%if @all_active_users_count > 0 %>
                                     <div>
                                         <p class="h4">All doctors <%= @all_doctors%><p>
                                         <div class="ml-2">
-                                            <p class="h6">- All active doctors <%= @active_users.length%><p>
-                                            <p class="h6">- All non active doctors <%= @requests.length%><p>
-                                            <% active_doctor_percantage = (@active_users.length.to_f/@all_doctors.to_f)*100%>
+                                            <p class="h6">- All active doctors <%= @all_active_users_count%><p>
+                                            <p class="h6">- All non active doctors <%= @all_requets_count%><p>
+                                            <% active_doctor_percantage = (@all_active_users_count.to_f/@all_doctors_count.to_f)*100%>
                                             <p>- <%= active_doctor_percantage.to_i%>% of all doctors have been activated</p>
                                         </div>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= active_doctor_percantage %>%"></div>
                                         </div>
+                                        <%=link_to "View active Doctors", doctors_admin_user_path(current_user), class:"text-primary"%>
                                     </div>
                                 <%else%>
                                     <div>
-                                        <p class="h4 text-light">There are no active doctors right now<p>
+                                        <p class="h4">There are no active doctors right now<p>
                                     </div>
                                 <%end%>
                             </div>
                         </div>
-                    <div class="card m-2 card-bg-dark" style="width:15rem!important">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <span class="card-title font-weight-bold text-light">Applications</span>
-                                <img src="https://img.icons8.com/ios/50/000000/text-input-form.png" class="download-icon"/>
-                            </div>
-                            <%if @requests.length > 0%>
-                                <div>
-                                    <p class="h4 text-light">All Applications <%= @requests.length%><p>
-                                    <div class="ml-2 text-light">
-                                        <p class="h6 text-light">- All applications with full informations <%= @active_users.length%><p>
-                                        <% percentage_of_all_applications_with_full_information = (applications_without_full_informations == 0 ? 1 : applications_without_full_informations.to_f/@requests.length.to_f)*100%>
-                                        <p class="text-light">- <%= percentage_of_all_applications_with_full_information.to_i%>% of all applications have full informations</p>
-                                    </div>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-animated bg-light" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= percentage_of_all_applications_with_full_information %>%"></div>
-                                    </div>
-                                </div>
-                            <%else%>
-                                <div>
-                                    <p class="h4 text-light">There are no applications right now<p>
-                                </div>
-                            <%end%>
-                        </div>
-                    </div>
-                    <div class="card m-2" style="width:15rem!important">
+                    <div class="card m-2 card-bg-success" style="width:15rem!important">
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
                                 <span class="h4">Comming soon....</span>
