--- a/app/assets/stylesheets/essentials.scss
+++ b/app/assets/stylesheets/essentials.scss
@@ -84,9 +84,19 @@
     min-height: 100vh;
 }
 
+.doctor-page{
+    background-color: #f9f9f9;
+    min-width: 100%;
+    min-height: 100vh;
+}
+
 .nav-pill{
     border-radius: 50px;
     background-color: #827397;
+}
+
+.doctor-nav-pill{
+    border-radius: 50px;
 }
 
 .btn-pill{
@@ -130,4 +140,17 @@
 
 .card-bg-success{
     background-color: #827397!important;
+}
+
+.doctor-card{
+    transition: all 0.9s;
+    border-radius: 15px!important;
+}
+
+.doctor-card:hover{
+    -webkit-box-shadow: 0px 13px 80px -26px rgba(216,185,195,1);
+    -moz-box-shadow: 0px 13px 80px -26px rgba(216,185,195,1);
+    box-shadow: 0px 13px 80px -26px rgba(216,185,195,1);
+    transition: all 0.9s;
+    border-radius: 25px!important;
 }
