--- a/app/assets/stylesheets/essentials.scss
+++ b/app/assets/stylesheets/essentials.scss
@@ -43,6 +43,10 @@
     color: #f8e1f4
 }
 
+.doctor-text-accent{
+    color: #3b6978
+}
+
 .text-accent-dark{
     color: #363062!important
 }
@@ -90,6 +94,16 @@
     min-height: 100vh;
 }
 
+.symptoms-page{
+    background-color: #204051;
+    min-width: 100%;
+    min-height: 100vh;
+}
+
+.symptoms-sub-page{
+    height: 100vh;
+}
+
 .nav-pill{
     border-radius: 50px;
     background-color: #827397;
@@ -97,10 +111,16 @@
 
 .doctor-nav-pill{
     border-radius: 50px;
+    background-color: #3b6978!important;
 }
 
 .btn-pill{
     border-radius: 50px!important
+}
+
+.doctor-btn-pill{
+    border-radius: 50px!important;
+    background-color: #84a9ac!important;
 }
 
 .table-pill{
@@ -153,4 +173,8 @@
     box-shadow: 0px 13px 80px -26px rgba(216,185,195,1);
     transition: all 0.9s;
     border-radius: 25px!important;
+}
+
+.doctor-chat-image{
+    width: 10rem
 }
