started working on selfscreening page

--- a/app/views/essentials/index.html.erb
+++ b/app/views/essentials/index.html.erb
@@ -35,7 +35,7 @@
                     <hr class="my-4 bg-light">
                     <p class="text-paragraphs">You can take a short screening test to diagnose your self by click <mark class="animated heartBeat delay-3s">Self Screening</mark> button, or if you are a doctor that wants to help please click <mark class="animated heartBeat delay-3s">Apply</mark>.</p>
                     <div class="">
-                        <a class="btn btn-lg m-2 bg-accent" href="#" role="button">Self Screening</a>
+                        <%= link_to "Self Screening", essential_screening_path(@patient.ids), class:"btn btn-lg m-2 bg-accent"%>
                         <%= link_to "Apply", new_user_registration_path, class:"btn btn-outline-dark btn-lg m-2"%>
                     </div>
                 </div>
