--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" %>
     <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" %>
-    <%= javascript_include_tag "https://code.jquery.com/jquery-3.3.1.slim.min.js"  %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"  %>
     <%= javascript_include_tag "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  %>
   </head>
 
