--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,7 +3,7 @@
         <div class="container d-flex justify-content-start mt-2 animated fadeIn">
             <div> 
                 <div class="m-2 d-flex justify-content-start">
-                    <span><%= message.user.username%></span>
+                    <span><%= message.user.activated == true ? "Dr." : ""%><%= message.user.username%></span>
                 </div>
                 <div class="bubble-card">
                     <p class="sent-bubble-card bg-white p-3"><%= message.body%></p>
@@ -17,7 +17,7 @@
         <div class="container d-flex justify-content-end mt-2 animated fadeIn">
             <div>
                 <div class="m-2 d-flex justify-content-end">
-                    <span><%= message.user.username%></span>
+                    <span><%= message.user.activated == true ? "Dr." : ""%><%= message.user.username%></span>
                 </div>
                 <div class="bubble-card">
                     <p class="received-bubble-card p-3"><%= message.body%></p>
