--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,124 +15,118 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid mt-5">
-        <div class="row">
-            <% applications_without_full_informations = 0 %>
-            <div class="col-7">
-                <%if @requests.length > 0%>
-                    <p class="text-light mb-3">Applications list</p>
-                    <% column_counter = 0 %>
-                    <table class="table table-striped table-light">
-                        <thead>
-                            <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Names</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Submitted</th>
-                            <th scope="col">Cv</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% @requests.each do |request| %>
-                                <%if !request["username"].present? || !request["cv"].present? %>
-                                    <%applications_without_full_informations += 1%>
-                                <%end%>
-                                <tr class="border-0 tr-hover">
-                                    <th scope="row"><%= column_counter += 1%></th>
-                                    <%if request["username"].present?%>
-                                        <td><%=request["username"]%></td>
-                                    <%else%>
-                                        <td>Not set</td>
-                                    <%end%>
-                                    <%if request["email"].present?%>
-                                        <td><%=request["email"]%></td>
-                                    <%else%>
-                                        <td>Not set</td>
-                                    <%end%>
-                                    <td><%= time_ago_in_words(request["updated_at"])%><span> ago<span></td>
-                                    <%if request["cv"].present?%>
-                                        <td><%= link_to image_tag("https://img.icons8.com/windows/32/000000/download.png"), request.cv.url(), class:"download-icon"%></td>
-                                    <%else%>
-                                        <td>Not set</td>
-                                    <%end%>
-                                    <%if request["username"].present? && request["email"].present? && request["cv"].present?%>
-                                        <td><%= link_to "activate", admin_user_activate_path(request), class: "bg-accent-success btn btn-pill" %>
-                                    <% else %>
-                                        <td><span class="text-danger">can't activate</span></td>
-                                    <% end %>
-                                    <td><%= link_to image_tag("https://img.icons8.com/android/24/000000/trash.png"),  request, method: :delete, data: { confirm: 'Are you sure?' }, class:"download-icon"%></td>
-                                </tr>
-                            <%end%>
-                        </tbody>
-                    </table>
-                    <div class="nav-pill"><div class="m-2 btn bg-accent btn-pill"><%= paginate @requests,class:"pagination" %></div></div>
-                <%else%>
-                    <p class="text-light m5-5 mb-3 Display-4">There are no applications now</p>
-                <%end%>
-            </div>
-            <div class="col-5">
-                    <div class="card-columns">
-                        <div class="card m-2 card-bg-dark" style="width:15rem!important">
-                            <div class="card-body">
-                                <div class="d-flex justify-content-between">
-                                    <span class="card-title font-weight-bold text-light">Applications</span>
-                                    <img src="https://img.icons8.com/ios/50/000000/text-input-form.png" class="download-icon"/>
-                                </div>
-                                <%if @requests.length > 0 %>
-                                    <div>
-                                        <p class="h4 text-light">All Applications <%= @requests.length%><p>
-                                        <div class="ml-2 text-light">
-                                            <p class="h6 text-light">- All applications with full informations <%= @all_requets_without_full_info_count%><p>
-                                            <% percentage_of_all_applications_with_full_information = (@all_requets_without_full_info_count == 0 ? 1 : @all_requets_without_full_info_count.to_f/@all_requets_count.to_f)*100%>
-                                            <p class="text-light">- <%= percentage_of_all_applications_with_full_information.to_i%>% of all applications doesnt have full informations</p>
-                                        </div>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-animated bg-light" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= percentage_of_all_applications_with_full_information %>%"></div>
-                                        </div>
-                                    </div>
-                                <%else%>
-                                    <div>
-                                        <p class="h4 text-light">There are no applications right now<p>
-                                    </div>
-                                <%end%>
-                            </div>
-                        </div>
-                        <div class="card m-2 card-bg-light" style="width:15rem!important">
-                            <div class="card-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <span class="card-title font-weight-bold">Active Doctors</span>
-                                    <img src="https://img.icons8.com/bubbles/50/000000/medical-doctor.png" class="download-icon"/>
-                                </div>
-                                <%if @all_active_users_count > 0 %>
-                                    <div>
-                                        <p class="h4">All doctors <%= @all_doctors%><p>
-                                        <div class="ml-2">
-                                            <p class="h6">- All active doctors <%= @all_active_users_count%><p>
-                                            <p class="h6">- All non active doctors <%= @all_requets_count%><p>
-                                            <% active_doctor_percantage = (@all_active_users_count.to_f/@all_doctors_count.to_f)*100%>
-                                            <p>- <%= active_doctor_percantage.to_i%>% of all doctors have been activated</p>
-                                        </div>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= active_doctor_percantage %>%"></div>
-                                        </div>
-                                        <%=link_to "View active Doctors", doctors_admin_user_path(current_user), class:"text-primary"%>
-                                    </div>
-                                <%else%>
-                                    <div>
-                                        <p class="h4">There are no active doctors right now<p>
-                                    </div>
-                                <%end%>
-                            </div>
-                        </div>
-                    <div class="card m-2 card-bg-success" style="width:15rem!important">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <span class="h4">Comming soon....</span>
-                            </div>
-                        </div>
+    <div class="container-fluid mt-5 pb-5">
+        <% applications_without_full_informations = 0 %>
+        <div class="d-flex justify-content-around align-items-center">
+            <div class="card m-2 card-bg-dark" style="width:20rem!important">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                        <span class="card-title font-weight-bold text-light">Applications</span>
+                        <img src="https://img.icons8.com/ios/50/000000/text-input-form.png" class="download-icon"/>
                     </div>
-                <div>
-            <div>
-        <div>
+                    <%if @requests.length > 0 %>
+                        <div>
+                            <p class="h4 text-light">All Applications <%= @requests.length%><p>
+                            <div class="ml-2 text-light">
+                                <p class="h6 text-light">- All applications with full informations <%= @all_requets_without_full_info_count%><p>
+                                <% percentage_of_all_applications_with_full_information = (@all_requets_without_full_info_count == 0 ? 1 : @all_requets_without_full_info_count.to_f/@all_requets_count.to_f)*100%>
+                                <p class="text-light">- <%= percentage_of_all_applications_with_full_information.to_i%>% of all applications doesnt have full informations</p>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-animated bg-light" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= percentage_of_all_applications_with_full_information %>%"></div>
+                            </div>
+                        </div>
+                    <%else%>
+                        <div>
+                            <p class="h4 text-light">There are no applications right now<p>
+                        </div>
+                    <%end%>
+                </div>
+            </div>
+            <div class="card m-2 card-bg-light" style="width:20rem!important">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <span class="card-title font-weight-bold">Active Doctors</span>
+                        <img src="https://img.icons8.com/bubbles/50/000000/medical-doctor.png" class="download-icon"/>
+                    </div>
+                    <%if @all_active_users_count > 0 %>
+                        <div>
+                            <p class="h4">All doctors <%= @all_doctors%><p>
+                            <div class="ml-2">
+                                <p class="h6">- All active doctors <%= @all_active_users_count%><p>
+                                <p class="h6">- All non active doctors <%= @all_requets_count%><p>
+                                <% active_doctor_percantage = (@all_active_users_count.to_f/@all_doctors_count.to_f)*100%>
+                                <p>- <%= active_doctor_percantage.to_i%>% of all doctors have been activated</p>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: <%= active_doctor_percantage %>%"></div>
+                            </div>
+                            <%=link_to "View active Doctors", doctors_admin_user_path(current_user), class:"text-primary"%>
+                        </div>
+                    <%else%>
+                        <div>
+                            <p class="h4">There are no active doctors right now<p>
+                        </div>
+                    <%end%>
+                </div>
+            </div>
+            <div class="card m-2 card-bg-success" style="width:20rem!important">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                        <span class="h4">Comming soon....</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <%if @requests.length > 0%>
+            <p class="text-light mb-3">Applications list</p>
+            <% column_counter = 0 %>
+            <table class="table table-striped table-light">
+                <thead>
+                    <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Names</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Submitted</th>
+                    <th scope="col">Cv</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% @requests.each do |request| %>
+                        <%if !request["username"].present? || !request["cv"].present? %>
+                            <%applications_without_full_informations += 1%>
+                        <%end%>
+                        <tr class="border-0 tr-hover">
+                            <th scope="row"><%= column_counter += 1%></th>
+                            <%if request["username"].present?%>
+                                <td><%=request["username"]%></td>
+                            <%else%>
+                                <td>Not set</td>
+                            <%end%>
+                            <%if request["email"].present?%>
+                                <td><%=request["email"]%></td>
+                            <%else%>
+                                <td>Not set</td>
+                            <%end%>
+                            <td><%= time_ago_in_words(request["updated_at"])%><span> ago<span></td>
+                            <%if request["cv"].present?%>
+                                <td><%= link_to image_tag("https://img.icons8.com/windows/32/000000/download.png"), request.cv.url(), class:"download-icon"%></td>
+                            <%else%>
+                                <td>Not set</td>
+                            <%end%>
+                            <%if request["username"].present? && request["email"].present? && request["cv"].present?%>
+                                <td><%= link_to "activate", admin_user_activate_path(request), class: "bg-accent-success btn btn-pill" %>
+                            <% else %>
+                                <td><span class="text-danger">can't activate</span></td>
+                            <% end %>
+                            <td><%= link_to image_tag("https://img.icons8.com/android/24/000000/trash.png"),  request, method: :delete, data: { confirm: 'Are you sure?' }, class:"download-icon"%></td>
+                        </tr>
+                    <%end%>
+                </tbody>
+            </table>
+            <div class="nav-pill"><div class="m-2 btn bg-accent btn-pill"><%= paginate @requests,class:"pagination" %></div></div>
+        <%else%>
+            <p class="text-light m5-5 mb-3 Display-4">There are no applications now</p>
+        <%end%>
     </div>
 </div> 
