--- a/app/assets/stylesheets/essentials.scss
+++ b/app/assets/stylesheets/essentials.scss
@@ -167,14 +167,6 @@
     border-radius: 15px!important;
 }
 
-.doctor-card:hover{
-    -webkit-box-shadow: 0px 13px 80px -26px rgba(216,185,195,1);
-    -moz-box-shadow: 0px 13px 80px -26px rgba(216,185,195,1);
-    box-shadow: 0px 13px 80px -26px rgba(216,185,195,1);
-    transition: all 0.9s;
-    border-radius: 25px!important;
-}
-
 .doctor-chat-image{
     width: 10rem
 }
@@ -369,4 +361,31 @@
 
 .patient-form{
   height: 80vh;
+}
+
+.bg-pinky-accent{
+  background-color: #f5a7a7
+}
+
+.doctor-top-img{
+  width: 15rem
+}
+
+.search-form{
+  background-color: #f0f0f0;
+  border-radius: 5px;
+}
+
+.search-form-input{
+  background:none!important;
+  border:none!important;
+  -webkit-box-shadow: none!important;
+  box-shadow: none!important;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
